kube/stage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: core-frontend-search
  namespace: core-frontend-stage
spec:
  parentRefs:
    - name: public-gateway
      namespace: gateway-system
  hostnames:
    - stg.core.ac.uk
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /search
        - path:
            type: PathPrefix
            value: /works
        - path:
            type: PathPrefix
            value: /outputs
        - path:
            type: PathPrefix
            value: /data-providers
      timeouts:
        request: 35s
        backendRequest: 30s
      backendRefs:
        - name: core-frontend-search
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /static/search
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      timeouts:
        request: 35s
        backendRequest: 30s
      backendRefs:
        - name: core-frontend-search
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /display
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /outputs
      timeouts:
        request: 35s
        backendRequest: 30s
      backendRefs:
        - name: core-frontend-search
          port: 80
